Melhorando o relatorio de emprestimo

--- a/WebRoot/WEB-INF/jasper/Emprestimo.jrxml
+++ b/WebRoot/WEB-INF/jasper/Emprestimo.jrxml
@@ -1,13 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Emprestimo" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
-	<property name="ireport.zoom" value="2.8531167061100082"/>
-	<property name="ireport.x" value="372"/>
-	<property name="ireport.y" value="65"/>
+	<property name="ireport.zoom" value="8.95430243255245"/>
+	<property name="ireport.x" value="2725"/>
+	<property name="ireport.y" value="860"/>
 	<parameter name="TITLE" class="java.lang.String"/>
 	<parameter name="DATE" class="java.util.Date"/>
 	<field name="usuario.nome" class="java.lang.String"/>
 	<field name="livro.nome" class="java.lang.String"/>
 	<field name="dataDeEmprestimo" class="java.util.Date"/>
+	<group name="grpUsuari">
+		<groupExpression><![CDATA[$F{usuario.nome}]]></groupExpression>
+		<groupHeader>
+			<band height="16">
+				<textField>
+					<reportElement x="0" y="0" width="220" height="16"/>
+					<textElement>
+						<font size="9"/>
+					</textElement>
+					<textFieldExpression class="java.lang.String"><![CDATA[$F{usuario.nome}]]></textFieldExpression>
+				</textField>
+			</band>
+		</groupHeader>
+		<groupFooter>
+			<band/>
+		</groupFooter>
+	</group>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
@@ -33,69 +50,59 @@
 	<columnHeader>
 		<band height="27" splitType="Stretch">
 			<rectangle>
-				<reportElement x="0" y="13" width="448" height="14" backcolor="#CCCCCC"/>
+				<reportElement x="0" y="13" width="351" height="14" backcolor="#CCCCCC"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="0" y="13" width="190" height="14"/>
+				<reportElement x="0" y="13" width="220" height="14"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font isBold="true" pdfFontName="Helvetica-Bold"/>
 				</textElement>
-				<text><![CDATA[Nome]]></text>
+				<text><![CDATA[Nome/Livro]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="190" y="13" width="130" height="14"/>
-				<textElement textAlignment="Center">
-					<font isBold="true" pdfFontName="Helvetica-Bold"/>
-				</textElement>
-				<text><![CDATA[Livro]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="320" y="13" width="128" height="14"/>
+				<reportElement x="221" y="13" width="130" height="14"/>
 				<textElement textAlignment="Center">
 					<font isBold="true" pdfFontName="Helvetica-Bold"/>
 				</textElement>
 				<text><![CDATA[Data de empréstimo]]></text>
 			</staticText>
 			<line>
-				<reportElement x="189" y="13" width="1" height="14"/>
-			</line>
-			<line>
-				<reportElement x="320" y="13" width="1" height="14"/>
+				<reportElement x="220" y="13" width="1" height="14"/>
 			</line>
 		</band>
 	</columnHeader>
 	<detail>
 		<band height="16" splitType="Stretch">
-			<textField>
-				<reportElement x="0" y="0" width="190" height="15"/>
-				<textElement>
-					<font size="9"/>
-				</textElement>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{usuario.nome}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="190" y="0" width="131" height="15"/>
-				<textElement>
-					<font size="9"/>
-				</textElement>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{livro.nome}]]></textFieldExpression>
-			</textField>
 			<textField pattern="dd/MM/yyyy">
-				<reportElement x="321" y="0" width="127" height="15"/>
+				<reportElement x="220" y="0" width="130" height="15"/>
 				<textElement>
 					<font size="9"/>
 				</textElement>
 				<textFieldExpression class="java.util.Date"><![CDATA[$F{dataDeEmprestimo}]]></textFieldExpression>
 			</textField>
+			<textField>
+				<reportElement x="57" y="0" width="163" height="15"/>
+				<textElement>
+					<font size="9"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{livro.nome}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="17" y="0" width="40" height="15"/>
+				<textElement textAlignment="Center">
+					<font size="9"/>
+				</textElement>
+				<text><![CDATA[-]]></text>
+			</staticText>
 		</band>
 	</detail>
 	<columnFooter>
-		<band height="45" splitType="Stretch"/>
+		<band splitType="Stretch"/>
 	</columnFooter>
 	<pageFooter>
-		<band height="54" splitType="Stretch"/>
+		<band splitType="Stretch"/>
 	</pageFooter>
 	<summary>
-		<band height="42" splitType="Stretch"/>
+		<band splitType="Stretch"/>
 	</summary>
 </jasperReport>
