--- a/WebRoot/WEB-INF/jasper/Auditoria.jrxml
+++ b/WebRoot/WEB-INF/jasper/Auditoria.jrxml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Auditoria.jrxml" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
-	<property name="ireport.zoom" value="1.464100000000001"/>
-	<property name="ireport.x" value="0"/>
+	<property name="ireport.zoom" value="1.771561000000005"/>
+	<property name="ireport.x" value="24"/>
 	<property name="ireport.y" value="0"/>
 	<parameter name="TITLE" class="java.lang.String"/>
 	<parameter name="DATA_INICIO" class="java.util.Date"/>
 	<parameter name="DATA_FIM" class="java.util.Date"/>
 	<field name="usuarioLogado" class="java.lang.String"/>
+	<field name="acao" class="java.lang.String"/>
+	<field name="entidade" class="java.lang.String"/>
+	<field name="data" class="java.lang.String"/>
 	<group name="grpUsuarioLogado">
 		<groupExpression><![CDATA[$V{PAGE_NUMBER}]]></groupExpression>
 		<groupHeader>
-			<band height="18">
+			<band height="15">
 				<textField>
-					<reportElement x="0" y="0" width="100" height="16"/>
+					<reportElement x="0" y="-1" width="197" height="16"/>
 					<textElement>
 						<font size="9"/>
 					</textElement>
@@ -21,16 +24,16 @@
 			</band>
 		</groupHeader>
 		<groupFooter>
-			<band height="50"/>
+			<band/>
 		</groupFooter>
 	</group>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="45" splitType="Stretch">
+		<band height="43" splitType="Stretch">
 			<textField>
-				<reportElement x="0" y="0" width="131" height="23"/>
+				<reportElement x="0" y="0" width="173" height="23"/>
 				<textElement>
 					<font size="16"/>
 				</textElement>
@@ -54,27 +57,54 @@
 		</band>
 	</title>
 	<pageHeader>
-		<band height="20" splitType="Stretch"/>
+		<band height="17" splitType="Stretch"/>
 	</pageHeader>
 	<columnHeader>
-		<band height="33" splitType="Stretch">
+		<band height="31" splitType="Stretch">
+			<rectangle>
+				<reportElement x="0" y="17" width="369" height="14" backcolor="#CCCCCC"/>
+			</rectangle>
 			<staticText>
-				<reportElement x="0" y="13" width="100" height="20"/>
-				<textElement/>
-				<text><![CDATA[Administrador]]></text>
+				<reportElement x="0" y="17" width="197" height="14"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font isBold="true" pdfFontName="Helvetica-Bold" isPdfEmbedded="false"/>
+				</textElement>
+				<text><![CDATA[Administrador/Ação]]></text>
 			</staticText>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="125" splitType="Stretch"/>
+		<band height="17" splitType="Stretch">
+			<textField>
+				<reportElement x="4" y="0" width="127" height="16"/>
+				<textElement>
+					<font size="9" isBold="false"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{acao}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="131" y="0" width="155" height="16"/>
+				<textElement>
+					<font size="9"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{entidade}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="286" y="0" width="83" height="16"/>
+				<textElement>
+					<font size="9"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{data}]]></textFieldExpression>
+			</textField>
+		</band>
 	</detail>
 	<columnFooter>
-		<band height="45" splitType="Stretch"/>
+		<band splitType="Stretch"/>
 	</columnFooter>
 	<pageFooter>
-		<band height="54" splitType="Stretch"/>
+		<band splitType="Stretch"/>
 	</pageFooter>
 	<summary>
-		<band height="42" splitType="Stretch"/>
+		<band splitType="Stretch"/>
 	</summary>
 </jasperReport>
