Implementando o Adicionar administrador

--- a/WebRoot/css/style.css
+++ b/WebRoot/css/style.css
@@ -1,8 +1,22 @@
-@CHARSET "ISO-8859-1";
+.rFloat{float: right}
+.lFloat{float: left}
+.cFloat{clear: both}
+/********************/
 
-#message-toolbar{
-	position: fixed;
-	top: 0px;
-	left: 0px;
-	height: 30px;
-}
+html { font-family: sans-serif;	font-size: 13px; }
+table {	font-size: 13px; }	
+#geral { width: 900px; margin:0 auto;}
+#reader { width: 100%; height: 37px; color: #fff; background: url(images/img-center.gif) repeat-x; } 
+#reader div { height: 100%; line-height: 35px; }
+#reader-logout { margin: 0 10px 0 10px; }
+#reader-right { width: 10px; background: url(images/img-right.gif) no-repeat ; }
+#reader-center { left: 50%;	margin-left: -60px;	width: 120px; height: 37px !important; position: absolute; }
+#reader-left { width: 10px; background: url(images/img-left.gif) no-repeat; }
+#login{ width: 160px; background: url(images/img-center.gif) repeat-x; }
+#sombra { width: 100%; background: url(images/sombra.gif) repeat-x;}
+
+button { width: 100px; background: #ddd }
+
+#content { width: 100%; padding: 15px;}
+#tabela { position: relative; left: 15% }
+#footer{ width: 100%; height: 60px; background: url(images/footer.gif) repeat-x; margin-top: 10px; }
