--- a/WebRoot/css/style.css
+++ b/WebRoot/css/style.css
@@ -23,15 +23,15 @@ button { width: 100px; background: #ddd }
 #divLogin { -webkit-border-radius: 10px; -moz-border-radius: 10px; border-radius: 10px;  width: 260px; height: 160px;
 			margin: 0 auto; border: 1px solid #ddd; 
 			background: #c9c9c9; /* Old browsers */
-background: -moz-linear-gradient(top, #c9c9c9 0%, #f0f0f0 3%, #ffffff 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#c9c9c9), color-stop(3%,#f0f0f0), color-stop(100%,#ffffff)); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top, #c9c9c9 0%,#f0f0f0 3%,#ffffff 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top, #c9c9c9 0%,#f0f0f0 3%,#ffffff 100%); /* Opera11.10+ */
-background: -ms-linear-gradient(top, #c9c9c9 0%,#f0f0f0 3%,#ffffff 100%); /* IE10+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c9c9c9', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
-background: linear-gradient(top, #c9c9c9 0%,#f0f0f0 3%,#ffffff 100%); /* W3C */
-			}
-#formLogin { padding: 15px; }
+			background: -moz-linear-gradient(top, #c9c9c9 0%, #f0f0f0 3%, #ffffff 100%); /* FF3.6+ */
+			background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#c9c9c9), color-stop(3%,#f0f0f0), color-stop(100%,#ffffff)); /* Chrome,Safari4+ */
+			background: -webkit-linear-gradient(top, #c9c9c9 0%,#f0f0f0 3%,#ffffff 100%); /* Chrome10+,Safari5.1+ */
+			background: -o-linear-gradient(top, #c9c9c9 0%,#f0f0f0 3%,#ffffff 100%); /* Opera11.10+ */
+			background: -ms-linear-gradient(top, #c9c9c9 0%,#f0f0f0 3%,#ffffff 100%); /* IE10+ */
+			filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c9c9c9', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
+			background: linear-gradient(top, #c9c9c9 0%,#f0f0f0 3%,#ffffff 100%); /* W3C */ }
+#formLogin { padding: 15px; width: 200px; }
+#formLogin .labelNome, .labelSenha{ display: inline; }
 .titleLogin {
 			-webkit-border-top-left-radius: 10px; -webkit-border-top-right-radius: 10px; 
 			-moz-border-radius-topleft: 10px; -moz-border-radius-topright: 10px; 
