--- a/WebRoot/css/style.css
+++ b/WebRoot/css/style.css
@@ -1,6 +1,10 @@
 .rFloat{float: right}
 .lFloat{float: left}
 .cFloat{clear: both}
+.bordaRedonda { -webkit-border-top-left-radius: 10px; -webkit-border-top-right-radius: 10px; 
+				-moz-border-radius-topleft: 10px; -moz-border-radius-topright: 10px; 
+				border-top-left-radius: 10px;  border-top-right-radius: 10px; }  
+
 /********************/
 
 html { font-family: sans-serif;	font-size: 13px; }
@@ -17,7 +21,7 @@ table {	font-size: 13px; }
 
 button { width: 100px; background: #ddd }
 
-#content { width: 100%; padding: 15px;}
+#content { width: 850px; height:300px; padding: 15px;}
 #tabela { position: relative; left: 15% }
 #footer{ width: 100%; height: 60px; background: url(images/footer.gif) repeat-x; margin-top: 10px; }
 #divLogin { -webkit-border-radius: 10px; -moz-border-radius: 10px; border-radius: 10px;  width: 260px; height: 195px;
@@ -35,9 +39,6 @@ button { width: 100px; background: #ddd }
 #formLogin h6 { text-align: right; }
 #formLogin .labelNome, .labelSenha{ display: inline; }
 .titleLogin {
-			-webkit-border-top-left-radius: 10px; -webkit-border-top-right-radius: 10px; 
-			-moz-border-radius-topleft: 10px; -moz-border-radius-topright: 10px; 
-			border-top-left-radius: 10px;  border-top-right-radius: 10px;  
 	 		font-size: 26px; text-align: center; margin: auto 0;
 			background: #9bb143; /* Old browsers */
 			background: -moz-linear-gradient(top, #9bb143 0%, #becf74 100%); /* FF3.6+ */
@@ -47,3 +48,15 @@ button { width: 100px; background: #ddd }
 			background: -ms-linear-gradient(top, #9bb143 0%,#becf74 100%); /* IE10+ */
 			filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#9bb143', endColorstr='#becf74',GradientType=0 ); /* IE6-9 */
 			background: linear-gradient(top, #9bb143 0%,#becf74 100%); /* W3C */}
+ul { margin: 0; padding: 0; list-style: none; width: 150px; border-bottom: 1px solid #9bb143; }
+ul li { position: relative; }
+li ul { position: absolute; left: 149px; top: 0; display: none; }
+ul li a { display: block; text-decoration: none; color: #fff; font-weight: bold; background: #acc05b; padding: 5px; border: 1px solid #9bb143; border-bottom: 0 }
+li:hover ul, li.over ul { display: block; }
+#menu{ float: left; }
+.titleGridList { width:100%;  height: 25px; padding-top: 5px; font-size: 20px;  background: url(images/img-center.gif) repeat-x; text-align: center }
+#listDeLivros { border: solid 1px #9bb143; float: right; width: 310px; height: 250px; overflow-y: auto; }
+/* Fix IE. Hide from IE Mac \*/
+* html ul li { float: left; height: 1%}
+* html ul li a { height: 1%; }
+/* End */
