--- a/WebRoot/css/style.css
+++ b/WebRoot/css/style.css
@@ -23,7 +23,7 @@ button { width: 100px; background: #ddd }
 
 #content { width: 850px; height:300px; padding: 15px;}
 #tabela { position: relative; left: 15% }
-#footer{ width: 100%; height: 60px; background: url(images/footer.gif) repeat-x; margin-top: 10px; }
+#footer{ width: 100%; height: 60px; background: url(images/footer.gif) repeat-x; margin-top: 50px; }
 #divLogin { -webkit-border-radius: 10px; -moz-border-radius: 10px; border-radius: 10px;  width: 260px; height: 195px;
 			margin: 0 auto; border: 1px solid #ddd; 
 			background: #c9c9c9; /* Old browsers */
@@ -48,14 +48,31 @@ button { width: 100px; background: #ddd }
 			background: -ms-linear-gradient(top, #9bb143 0%,#becf74 100%); /* IE10+ */
 			filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#9bb143', endColorstr='#becf74',GradientType=0 ); /* IE6-9 */
 			background: linear-gradient(top, #9bb143 0%,#becf74 100%); /* W3C */}
-ul { margin: 0; padding: 0; list-style: none; width: 150px; border-bottom: 1px solid #9bb143; }
+/* MENU */
+#menu{ margin: -15px 0 0 -15px; width: 490px }
+#menu #nav{ border-bottom: none }
+#menu a{ text-decoration:none; }
+#menu ul{ list-style:none; height: 30px; margin:0; padding:0; border-bottom: 1px solid #9bb143; }
+#menu li ul{ display:none; border: none }
+#menu ul li{ position:relative; float:left; width:121px; height:23px; }
+#menu ul li a { display:block; padding:0; margin:0; width:120px; height:23px; font-weight: bold; text-align:center; border:1px solid #9bb143; background:#acc05b;  color: #fff; }
+#menu ul li:hover ul { display:block; margin-top:-1px; }
+#menu ul li:hover ul li ul { display: none; }
+#menu ul li:hover ul li:hover ul { display:block; position:absolute; left:121px; top:0; margin-top:0; } 
+#menu ul li{ display:block; float:left; }
+#menu ul li:hover ul { display:block; position:absolute; top:26px; }
+#menu ul li:hover ul li:hover ul { display:block; }
+#menu ul li:hover ul li:hover ul { display:block; position:absolute; left:121px; top:0; margin-top:0; }
+
+/*
+ul { margin: 0; padding: 0; list-style: none; width: 150px; border-bottom: 1px solid #9bb143;  }
 ul li { position: relative; }
 li ul { position: absolute; left: 149px; top: 0; display: none; }
 ul li a { display: block; text-decoration: none; color: #fff; font-weight: bold; background: #acc05b; padding: 5px; border: 1px solid #9bb143; border-bottom: 0 }
 li:hover ul, li.over ul { display: block; }
-#menu{ float: left; }
-.titleGridList { width:100%;  height: 25px; padding-top: 5px; font-size: 20px;  background: url(images/img-center.gif) repeat-x; text-align: center }
-#listDeLivros { border: solid 1px #9bb143; float: right; width: 310px; height: 250px; overflow-y: auto; }
+#menu{ float: left; } */
+#listDeLivros { border: solid 1px #9bb143; position: relative; margin: 0 auto; top: 70px; width: 800px; height: 250px; overflow-y: auto; }
+.titleGridList { width:100%; color:#fff; height: 25px; padding-top: 5px; font-size: 20px;  background: url(images/img-center.gif) repeat-x; text-align: center }
 /* Fix IE. Hide from IE Mac \*/
 * html ul li { float: left; height: 1%}
 * html ul li a { height: 1%; }
